--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -92,7 +92,7 @@ header{
             }
         }
     }
-    @media screen and (max-width: 1280px) {
+    @media screen and (max-width: 1199px) {
         nav .list{
             display: none;
         }
@@ -103,6 +103,7 @@ header{
             @include font-desktop();
             position: relative;
             align-items: center;
+            justify-content: flex-end;
             padding-top: 32px;
             padding-bottom: 69px;
         }
@@ -112,8 +113,8 @@ header{
 
         nav {
             align-items: center;
-            margin-left: auto;
-            margin-right: 110px;
+            // margin-left: calc((100% - 568px)/4);
+            margin-right: calc(((100% - 568px)/2) - 160px);
             z-index: 2;
         }
 
