--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -45,6 +45,52 @@
         
     }
 
+    @media screen and (max-width: 560px) {
+        .ice-girl{
+            display: none;
+        }
+
+        .list{
+            display: none;
+        }
+        .icecream{
+            position: absolute;
+            width: 171px;
+            top: 9px;
+            left: 30.31vw;
+        }
+        .icecream-before:before{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 5vw;
+            width: 346px;
+            height: 346px;
+            border-radius: 50%;
+            background-color: var(--pink);
+        }
+    }
+
+    @media screen and (min-width: 560px) and (max-width: 767px){
+        .icecream{
+            position: absolute;
+            width: 171px;
+            top: 9px;
+            left: 197px;
+        }
+        .icecream-before:before{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 116px;
+            width: 346px;
+            height: 346px;
+            border-radius: 50%;
+            background-color: var(--pink);
+        }
+    }
+
+    
     @media screen and (max-width: 767px) {
             overflow: hidden; 
 
@@ -53,30 +99,65 @@
             padding-bottom: 160px;
             position: relative;
         }
-        .nav:after{
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 16px;
-            width: 346px;
-            height: 346px;
-            border-radius: 50%;
-            background-color: var(--pink);
-        }
-        .icecream{
-            position: absolute;
-            width: 171px;
-            top: 9px;
-            left: 97px;
-        }
+
         .title{
             margin-bottom: 19px;
             position: relative;
             width: 218px;
             z-index: 1;
         }
-        .milk, .ice-girl, .list, .text, .button-bio{
+        .milk, .text, .button-bio{
             display: none;
+        }
+        .ice-girl{
+            position: absolute;
+            width: 168px;
+            bottom: 0px;
+            right: 0px;
+        }
+        .list{
+            position: absolute;
+            top: 2px;
+            right: 7px;
+
+            .item{
+                position: relative;
+            }
+
+            .item:not(:last-child){
+                margin-bottom: 24px;
+            }
+            .item::after{
+                content: "";
+                position: absolute;
+                z-index: 0;
+                top: -2px;
+                left: 27px;
+                width: 16px;
+                height: 16px;
+                border-radius: 50%;
+                background-color: var(--white);
+            }
+
+            .nomber-of{
+                display: block;
+                position: relative;
+                z-index: 1;
+                font-family: 'Titan One', sans-serif;
+                @include font-mobile($fs:28px, $lh:32px, $fw:400);
+                color: var(--dark-pink);
+            }
+
+            .quantity-of{
+                display: block;
+                position: absolute;
+                white-space: nowrap;
+                top: 32px;
+                right: 2px;
+                @include font-mobile($fs:8px, $lh:10px, $fw:400);
+                color: var(--white);
+
+            }
         }
         .nav a{
             position: relative; 
@@ -99,16 +180,6 @@
         }
         .nav{
             margin-bottom: 19px;
-            &:after{
-                content: "";
-                position: absolute;
-                bottom: 46px;
-                left: 273px;
-                width: 324px;
-                height: 324px;
-                border-radius: 50%;
-                background-color: var(--pink);
-            }
         }
         .list{
             position: absolute;
@@ -158,7 +229,17 @@
             position: absolute;
             width: 143px;
             bottom: 0;
-            left: 344px;
+            left: 44.79vw;
+        }
+        .icecream-before:before{
+            content: "";
+            position: absolute;
+            bottom: 46px;
+            left: 35.546vw;
+            width: 324px;
+            height: 324px;
+            border-radius: 50%;
+            background-color: var(--pink);
         }
         .ice-girl{
             position: absolute;
@@ -201,6 +282,9 @@
             padding-top: 15px;
             padding-bottom: 62px;
         }
+        .mobile-menu{
+            display: none;
+        }
         .title{
             width: 277px;
             @include font-mobile($fs:38px, $lh:44px, $fw:400);
@@ -208,29 +292,29 @@
         .title-red{
             @include font-mobile($fs:58px, $lh:52px, $fw:400);
         }
-        .nav{
-            &:after{
-                content: "";
-                position: absolute;
-                bottom: 81px;
-                left: 360px;
-                width: 538px;
-                height: 538px;
-                border-radius: 50%;
-                background-color: var(--pink);
-            }
-            a{
+
+        .nav a{
                 @include font-mobile($fs:14px, $lh:18px, $fw:400);
                 padding: 11px 24px;
                 margin-bottom: 56px;
               
-            }
         }
+    
         .icecream{
             width: 236px;
             height: 557px;
             bottom: 0;
-            left: 479px;
+            left: 39.916vw;
+        }
+        .icecream-before:before{
+            content: "";
+            position: absolute;
+            bottom: 81px;
+            left: 30vw;
+            width: 538px;
+            height: 538px;
+            border-radius: 50%;
+            background-color: var(--pink);
         }
         .ice-girl{
             width: 293px;
