--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -22,15 +22,17 @@
             <source srcset="./images/1-hero/1200-milk.png 1x, ./images/1-hero/1200-milk@2x.png 2x, ./images/1-hero/1200-milk@3x.png 3x" media="(min-width:1200px)">     
             <img class="milk" src="./images/1-hero/1200-milk.png" width="188">    
         </picture>
-        <picture>
-            <source srcset="./images/1-hero/320-icecream.webp 1x, ./images/1-hero/320-icecream@2x.webp 2x, ./images/1-hero/320-icecream@3x.webp 3x" media="(min-width:320px)" type="image/webp"> 
-            <source srcset="./images/1-hero/320-icecream.png 1x, ./images/1-hero/320-icecream@2x.png 2x, ./images/1-hero/320-icecream@3x.png 3x" media="(min-width:320px)"> 
-            <source srcset="./images/1-hero/768-icecream.webp 1x, ./images/1-hero/768-icecream@2x.webp 2x, ./images/1-hero/768-icecream@3x.webp 3x" media="(min-width:768px)" type="image/webp"> 
-            <source srcset="./images/1-hero/768-icecream.png 1x, ./images/1-hero/768-icecream@2x.png 2x, ./images/1-hero/768-icecream@3x.png 3x" media="(min-width:768px)"> 
-            <source srcset="./images/1-hero/1200-icecream.webp 1x, ./images/1-hero/1200-icecream@2x.webp 2x, ./images/1-hero/1200-icecream@3x.webp 3x" media="(min-width:1200px)" type="image/webp"> 
-            <source srcset="./images/1-hero/1200-icecream.png 1x, ./images/1-hero/1200-icecream@2x.png 2x, ./images/1-hero/1200-icecream@3x.png 3x" media="(min-width:1200px)">     
-            <img class="icecream" src="./images/1-hero/1200-icecream.png" width="236">    
-        </picture>
+        <span class="icecream-before">
+            <picture>
+                <source srcset="./images/1-hero/320-icecream.webp 1x, ./images/1-hero/320-icecream@2x.webp 2x, ./images/1-hero/320-icecream@3x.webp 3x" media="(min-width:320px)" type="image/webp"> 
+                <source srcset="./images/1-hero/320-icecream.png 1x, ./images/1-hero/320-icecream@2x.png 2x, ./images/1-hero/320-icecream@3x.png 3x" media="(min-width:320px)"> 
+                <source srcset="./images/1-hero/768-icecream.webp 1x, ./images/1-hero/768-icecream@2x.webp 2x, ./images/1-hero/768-icecream@3x.webp 3x" media="(min-width:768px)" type="image/webp"> 
+                <source srcset="./images/1-hero/768-icecream.png 1x, ./images/1-hero/768-icecream@2x.png 2x, ./images/1-hero/768-icecream@3x.png 3x" media="(min-width:768px)"> 
+                <source srcset="./images/1-hero/1200-icecream.webp 1x, ./images/1-hero/1200-icecream@2x.webp 2x, ./images/1-hero/1200-icecream@3x.webp 3x" media="(min-width:1200px)" type="image/webp"> 
+                <source srcset="./images/1-hero/1200-icecream.png 1x, ./images/1-hero/1200-icecream@2x.png 2x, ./images/1-hero/1200-icecream@3x.png 3x" media="(min-width:1200px)">     
+                <img class="icecream" src="./images/1-hero/1200-icecream.png" width="236">    
+            </picture>
+        </span>
         <picture>
             <source srcset="./images/1-hero/768-ice-girl.webp 1x, ./images/1-hero/768-ice-girl@2x.webp 2x, ./images/1-hero/768-ice-girl@3x.webp 3x" media="(min-width:768px)" type="image/webp"> 
             <source srcset="./images/1-hero/768-ice-girl.png 1x, ./images/1-hero/768-ice-girl@2x.png 2x, ./images/1-hero/768-ice-girl@3x.png 3x" media="(min-width:768px)"> 
@@ -40,8 +42,8 @@
         </picture>
         <div class="info-bio">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        <button class="button-bio">
-            <svg width="7px" heighy="6">
+        <button class="button-bio" data-modal-hero-open>
+            <svg width="7px" height="6">
                 <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
         </button>
