adds a gradient to the contacts section

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,7 +1,5 @@
 .contacts {
   width: 100%;
-  // margin-right: auto;
-  // margin-left: auto;
   padding-right: 50px;
   padding-bottom: 56px;
   padding-left: 50px;
@@ -12,7 +10,9 @@
   font-weight: 500;
   letter-spacing: 0.04em;
 
-  background-color: var(--secondary-bg-color);
+  // background-color: var(--secondary-bg-color);
+  background-image: linear-gradient(to bottom, var(--primary-light-bg-color) 15%, var(--secondary-bg-color) 15%, var(--secondary-bg-color) 85%);
+  
     
     @include adaptive-for-tablet {
       font-size: 14px;
