--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: bottom, 61px;
+  width: 100%;
   @media screen and (min-width: 768px) {
     padding-top: 130px;
   }
@@ -81,6 +82,26 @@
 .about-for-flex {
   @media screen and (min-width: 768px) {
     display: flex;
+  }
+}
+
+.about-container {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 1280px;
+    padding-left: 115px;
+    padding-right: 115px;
   }
 }
 
