видео модалки по центру

--- a/src/sass/about-modal.scss
+++ b/src/sass/about-modal.scss
@@ -118,8 +118,8 @@
   line-height: 1.5;
   letter-spacing: 0.03em;
   display: inline-block;
-  margin-bottom: 15px;
-  text-align: start;
+  margin-bottom: 10px;
+  text-align: center;
   text-transform: uppercase;
   color: rgb(36, 30, 30);
 }
@@ -130,7 +130,9 @@
   margin-bottom: 35px;
   color: grey;
 }
-
+.about-video-box {
+  text-align: center;
+}
 .about-video {
   width: 250px;
   height: 173px;
@@ -143,7 +145,7 @@
     font-size: 16px;
   }
   .about-video {
-    width: 450px;
-    height: 273px;
+    width: 430px;
+    height: 373px;
   }
 }
