--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,7 @@
 
         <!--products-->
         <section class="section-products">
-            <div class="container">
-                <a name="Products"></a>
+            <div class="container" id="Products">
                 <p class="products-text"> 100% natural</p>
                 <h2 class="products-title"> products </h2>
 
