--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <section class="container-contacts">
   <!-- <h2>Contacts</h2> -->
 
-  <div class="container">
+  <div class="container" id="Contact">
     <div class="contacts">
       <ul class="contacts-cards">
         <li class="contacts-list">
