--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -27,11 +27,7 @@
                 <br>
                 <br>
                 Aliquam erat volutpat. Aenean accumsan.</span>
-                <button type="button" class="about-button">Read more
-                    <svg class="about-button-icon" height="10" width="7.5">
-                        <use href="./images/icon/sprite.svg#icon-Vector-1"></use>
-                    </svg>
-                </button>
+                <button type="button" class="about-button">Read more</button>
             </div>
         </div>
     </div>
