--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,5 +1,12 @@
 .container-contacts {
   background-color: #fff5f6;
+
+   @media screen and (min-width: 1200px) {
+  background-image: url(../images/7-contacts/contacts.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+   }
 }
 
 
@@ -139,7 +146,7 @@
   color: var(--grey);
 }
 
-.list {
+.contact-list {
   display: flex;  
   justify-content: center;
   flex-direction: column;
@@ -151,6 +158,7 @@
 
 .contacts-button-list {
   margin-bottom: 10px;
+  list-style: none;
 
   &:last-child {
     margin-bottom: 0;
@@ -171,6 +179,13 @@
   padding-top: 54px;
   padding-bottom: 113px;
 
+   @media screen and (min-width: 768px) {
+     padding-bottom: 158px;
+   }
+
+    @media screen and (min-width: 1200px) {
+     padding-bottom: 165px;
+   }
 }
 
 .contact-button-white {
