подправил падинги на галереи и подправил кнопки на контактах

--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,482 +1,486 @@
 .section-contacts {
-    padding-bottom: 79px;
-    max-width: 2000px;
-    background-image: linear-gradient(to bottom,
-            #ffffff 6%,
-            #FFF5F6 6%,
-            #FFF5F6 88%);
+  padding-bottom: 79px;
+  max-width: 2000px;
+  background-image: linear-gradient(
+    to bottom,
+    #ffffff 6%,
+    #fff5f6 6%,
+    #fff5f6 88%
+  );
 }
 
 .contacts-card {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 
-    &:last-child {
-        margin-bottom: 54px;
-    }
+  &:last-child {
+    margin-bottom: 54px;
+  }
 }
 
 /*стили для первой лишки*/
 .contacts-list {
-    background-color: $text-white-color;
-    width: 220px;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-    border-radius: 24px;
-    padding-top: 43px;
+  background-color: $text-white-color;
+  width: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  padding-top: 43px;
 }
 
 .contacts-category-cafe {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-    letter-spacing: 0.04em;
-    text-align: center;
-    color: $text-white-color;
-    background-color: $bg-coffee-color;
-    width: 80px;
-    border-radius: 4px;
-    margin-left: 20px;
-    margin-bottom: 25px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: $text-white-color;
+  background-color: $bg-coffee-color;
+  width: 80px;
+  border-radius: 4px;
+  margin-left: 20px;
+  margin-bottom: 25px;
 }
 
 .contacts-city {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-    letter-spacing: 0.04em;
-    text-align: left;
-    color: $text-primary-color;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: $text-primary-color;
 }
 
 .contacts-text {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: $text-secondary-color;
-    margin-top: 10px;
-    width: 179px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: $text-secondary-color;
+  margin-top: 10px;
+  width: 179px;
 }
 
 .contacts-item-city {
-    margin-left: 20px;
-    border-bottom: 1px solid $bg-border-color;
-    width: 179px;
-    padding-bottom: 25px;
+  margin-left: 20px;
+  border-bottom: 1px solid $bg-border-color;
+  width: 179px;
+  padding-bottom: 25px;
 }
 
 /*стили для второй лишки*/
 .contacts-schedule {
-    margin-left: 20px;
-    margin-top: 25px;
-    padding-bottom: 25px;
-    border-bottom: 1px solid $bg-border-color;
-    width: 179px;
+  margin-left: 20px;
+  margin-top: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid $bg-border-color;
+  width: 179px;
 }
 
 .contacts-category-food {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-    letter-spacing: 0.04em;
-    text-align: center;
-    color: $text-white-color;
-    margin-left: 20px;
-    background-color: $bg-shakes-color;
-    width: 130px;
-    border-radius: 4px;
-    margin-bottom: 25px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: $text-white-color;
+  margin-left: 20px;
+  background-color: $bg-shakes-color;
+  width: 130px;
+  border-radius: 4px;
+  margin-bottom: 25px;
 }
 
 .contacts-week {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: $text-primary-color;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: $text-primary-color;
 }
 
 .contacts-time {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: $bg-hero-color;
-    margin-bottom: 10px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: $bg-hero-color;
+  margin-bottom: 10px;
 
-    &:last-child {
-        margin-bottom: 0;
-    }
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 /*стили для третьей лишки*/
 .contacts-item-link {
-    font-family: DM Sans;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-left: 20px;
-    margin-top: 25px;
-    list-style: none;
-    padding-bottom: 43px;
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-left: 20px;
+  margin-top: 25px;
+  list-style: none;
+  padding-bottom: 43px;
 }
 
 .contacts-link {
-    text-decoration: none;
-    color: $text-secondary-color;
+  text-decoration: none;
+  color: $text-secondary-color;
 }
 
 /*стили кнопок*/
 .contacts-button-container {
-    text-align: center;
+  text-align: center;
 }
 
 .contacts-button-locations {
-    font-family: DM Sans;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: center;
-    border-radius: 22px;
-    background-color: $bg-button-color;
-    border-color: $bg-button-color;
-    color: $text-white-color;
-    padding-left: 17px;
-    padding-right: 17px;
-    height: 44px;
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    cursor: pointer;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+  border-radius: 22px;
+  background-color: $bg-button-color;
+  border-color: $bg-button-color;
+  color: $text-white-color;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 44px;
+  max-width: 163px;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .contacts-button-franchise {
-    font-family: DM Sans;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: $bg-button-color;
-    background-color: $text-white-color;
-    border-color: $text-white-color;
-    border-radius: 22px;
-    padding-left: 17px;
-    padding-right: 17px;
-    height: 44px;
-    display: block;
-    margin: 0 auto;
-    cursor: pointer;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: $bg-button-color;
+  background-color: $text-white-color;
+  border-color: $text-white-color;
+  border-radius: 22px;
+  padding-left: 17px;
+  padding-right: 17px;
+  height: 44px;
+  max-width: 163px;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
 }
 
 .contacts-white-icon {
-    fill: $text-white-color;
-    width: 4px;
-    height: 8px;
-    margin-left: 8px;
+  fill: $text-white-color;
+  width: 7px;
+  height: 10px;
+  margin-left: 8px;
 }
 
 .contacts-red-icon {
-    fill: $bg-button-color;
-    width: 4px;
-    height: 8px;
-    margin-left: 8px;
+  fill: $bg-button-color;
+  width: 7px;
+  height: 10px;
+  margin-left: 8px;
 }
 
 /*ВНИМАНИЕ!!! Стили для десктопа*/
 /*базовые стили секции*/
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
+  .section-contacts {
+    background-image: linear-gradient(
+      to bottom,
+      #ffffff 10%,
+      #fff5f6 10%,
+      #fff5f6 80%
+    );
+  }
 
-    .section-contacts {
-        background-image: linear-gradient(to bottom,
-                #ffffff 10%,
-                #FFF5F6 10%,
-                #FFF5F6 80%);
+  .contacts-main-list {
+    display: flex;
+    margin-bottom: 81px;
+    justify-content: center;
+  }
+
+  .contacts-card {
+    margin-right: 20px;
+
+    &:last-child {
+      margin-right: 0px;
     }
+  }
 
-    .contacts-main-list {
-        display: flex;
-        margin-bottom: 81px;
-        justify-content: center;
+  .contacts-card {
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-bottom: 0;
     }
+  }
 
-    .contacts-card {
-        margin-right: 20px;
+  .contacts-list {
+    padding-top: 50px;
+    margin: 0;
+  }
 
-        &:last-child {
-            margin-right: 0px;
-        }
+  /*Стили для первой лишки*/
 
+  .contacts-category-cafe {
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 31px;
+    margin-bottom: 30px;
+    width: 73px;
+  }
+
+  .contacts-category-food {
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 31px;
+    margin-bottom: 30px;
+    width: 138px;
+  }
+
+  .contacts-item-city {
+    font-size: 14px;
+    line-height: 26px;
+    margin-left: 31px;
+    width: 157px;
+    padding-bottom: 30px;
+  }
+
+  .contacts-text {
+    font-size: 14px;
+    line-height: 23px;
+    width: 145px;
+    margin-top: 14px;
+  }
+
+  /*Стили для второй лишки*/
+  .contacts-schedule {
+    margin-left: 31px;
+    margin-top: 30px;
+    border-bottom: 1px solid $bg-border-color;
+    padding-bottom: 30px;
+    width: 157px;
+  }
+
+  .contacts-week {
+    font-size: 14px;
+    line-height: 26px;
+  }
+
+  .contacts-time {
+    font-size: 14px;
+    line-height: 26px;
+    margin-bottom: 16px;
+
+    &:last-child {
+      margin-bottom: 0px;
     }
+  }
 
-    .contacts-card {
-        margin-bottom: 0;
+  /*Стили для третьей лишки*/
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
+  .contacts-item-link {
+    font-size: 14px;
+    line-height: 26px;
+    margin-left: 31px;
+    margin-top: 30px;
+    padding-bottom: 50px;
+  }
 
-    .contacts-list {
-        padding-top: 50px;
-        margin: 0;
-    }
+  /*Стили для кнопок*/
+  .contacts-button-container {
+    padding-bottom: 79px;
+  }
 
-    /*Стили для первой лишки*/
+  .contacts-button-locations {
+    margin-right: 15px;
+    display: inline;
+    padding: 0 25px;
+    max-width: 192px;
+  }
 
-    .contacts-category-cafe {
-        font-size: 16px;
-        line-height: 30px;
-        margin-left: 31px;
-        margin-bottom: 30px;
-        width: 73px;
-    }
+  .contacts-button-franchise {
+    display: inline;
+    padding: 0 30px;
+    max-width: 175px;
+  }
 
-    .contacts-category-food {
-        font-size: 16px;
-        line-height: 30px;
-        margin-left: 31px;
-        margin-bottom: 30px;
-        width: 138px;
-    }
+  .contacts-white-icon {
+    margin-left: 14px;
+  }
 
-    .contacts-item-city {
-        font-size: 14px;
-        line-height: 26px;
-        margin-left: 31px;
-        width: 157px;
-        padding-bottom: 30px;
-    }
-
-    .contacts-text {
-        font-size: 14px;
-        line-height: 23px;
-        width: 145px;
-        margin-top: 14px;
-    }
-
-    /*Стили для второй лишки*/
-    .contacts-schedule {
-        margin-left: 31px;
-        margin-top: 30px;
-        border-bottom: 1px solid $bg-border-color;
-        padding-bottom: 30px;
-        width: 157px;
-    }
-
-    .contacts-week {
-        font-size: 14px;
-        line-height: 26px;
-    }
-
-    .contacts-time {
-        font-size: 14px;
-        line-height: 26px;
-        margin-bottom: 16px;
-
-        &:last-child {
-            margin-bottom: 0px;
-        }
-    }
-
-    /*Стили для третьей лишки*/
-
-    .contacts-item-link {
-        font-size: 14px;
-        line-height: 26px;
-        margin-left: 31px;
-        margin-top: 30px;
-        padding-bottom: 50px;
-    }
-
-    /*Стили для кнопок*/
-    .contacts-button-container {
-        padding-bottom: 79px;
-    }
-
-    .contacts-button-locations {
-        margin-right: 15px;
-        display: inline;
-        padding: 0 30px;
-    }
-
-    .contacts-button-franchise {
-        display: inline;
-        padding: 0 30px;
-    }
-
-    .contacts-white-icon {
-        margin-left: 14px;
-    }
-
-    .contacts-red-icon {
-        margin-left: 14px;
-    }
+  .contacts-red-icon {
+    margin-left: 14px;
+  }
 }
 
 /*Внимание!!! Стили для компа*/
 
-
 @media screen and (min-width: 1280px) {
-    .section-contacts {
-        background-image: url("../images/desk-contactst-fon.png");
-    }
+  .section-contacts {
+    background-image: url('../images/desk-contactst-fon.png');
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px),
-screen and (min-resolution: 192dpi) and (min-width: 1280px),
-screen and (min-resolution: 2dppx) and (min-width: 1280px) {
-    .section-contacts {
-        background-image: url("../images/desk-contactst-fon@2x.png");
-    }
+  screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px),
+  screen and (min-resolution: 192dpi) and (min-width: 1280px),
+  screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+  .section-contacts {
+    background-image: url('../images/desk-contactst-fon@2x.png');
+  }
 }
 
-@media screen and (min-width:1280px) {
-    .section-contacts {
-        background-image:
-            url("../images/desk-contactst-fon.png"),
-            linear-gradient(to bottom,
-                #ffffff 12%,
-                #FFF5F6 12%,
-                #FFF5F6 76%);
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: 0 22%;
+@media screen and (min-width: 1280px) {
+  .section-contacts {
+    background-image: url('../images/desk-contactst-fon.png'),
+      linear-gradient(to bottom, #ffffff 12%, #fff5f6 12%, #fff5f6 76%);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 22%;
+  }
+
+  .contacts-main-list {
+    margin-bottom: 86px;
+  }
+
+  .contacts-card {
+    margin-right: 31px;
+
+    &:last-child {
+      margin-right: 0px;
     }
+  }
 
-    .contacts-main-list {
-        margin-bottom: 86px;
+  .contacts-card {
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-bottom: 0;
     }
+  }
 
-    .contacts-card {
-        margin-right: 31px;
+  .contacts-list {
+    padding-top: 51px;
+    margin: 0;
+    width: 330px;
+  }
 
-        &:last-child {
-            margin-right: 0px;
-        }
+  /*Стили для первой лишки*/
 
+  .contacts-category-cafe {
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 43px;
+    margin-bottom: 32px;
+    width: 73px;
+  }
+
+  .contacts-category-food {
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 43px;
+    margin-bottom: 32px;
+    width: 138px;
+  }
+
+  .contacts-item-city {
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 43px;
+    padding-bottom: 32px;
+    width: 234px;
+  }
+
+  .contacts-text {
+    font-size: 16px;
+    line-height: 30px;
+    width: 243px;
+    margin-top: 10px;
+  }
+
+  .contacts-city {
+    font-size: 16px;
+    line-height: 30px;
+  }
+
+  /*Стили для второй лишки*/
+  .contacts-schedule {
+    margin-left: 43px;
+    margin-top: 32px;
+    padding-bottom: 32px;
+    width: 234px;
+  }
+
+  .contacts-week {
+    font-size: 16px;
+    line-height: 30px;
+  }
+
+  .contacts-time {
+    font-size: 16px;
+    line-height: 30px;
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0px;
     }
+  }
 
-    .contacts-card {
-        margin-bottom: 0;
+  /*Стили для третьей лишки*/
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
+  .contacts-item-link {
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 43px;
+    margin-top: 32px;
+    padding-bottom: 62px;
+    width: 243px;
+  }
 
-    .contacts-list {
-        padding-top: 51px;
-        margin: 0;
-        width: 330px;
-    }
+  /*Стили для кнопок*/
+  .contacts-button-container {
+    padding-bottom: 79px;
+  }
 
-    /*Стили для первой лишки*/
+  .contacts-button-locations {
+    margin-right: 15px;
+    padding: 0 30px;
+    max-width: 198px;
+  }
 
-    .contacts-category-cafe {
-        font-size: 16px;
-        line-height: 30px;
-        margin-left: 43px;
-        margin-bottom: 32px;
-        width: 73px;
-    }
-
-    .contacts-category-food {
-        font-size: 16px;
-        line-height: 30px;
-        margin-left: 43px;
-        margin-bottom: 32px;
-        width: 138px;
-    }
-
-    .contacts-item-city {
-        font-size: 16px;
-        line-height: 30px;
-        margin-left: 43px;
-        padding-bottom: 32px;
-        width: 234px;
-    }
-
-    .contacts-text {
-        font-size: 16px;
-        line-height: 30px;
-        width: 243px;
-        margin-top: 10px;
-    }
-
-    .contacts-city {
-        font-size: 16px;
-        line-height: 30px;
-    }
-
-    /*Стили для второй лишки*/
-    .contacts-schedule {
-        margin-left: 43px;
-        margin-top: 32px;
-        padding-bottom: 32px;
-        width: 234px;
-    }
-
-    .contacts-week {
-        font-size: 16px;
-        line-height: 30px;
-    }
-
-    .contacts-time {
-        font-size: 16px;
-        line-height: 30px;
-        margin-bottom: 15px;
-
-        &:last-child {
-            margin-bottom: 0px;
-        }
-    }
-
-    /*Стили для третьей лишки*/
-
-    .contacts-item-link {
-        font-size: 16px;
-        line-height: 30px;
-        margin-left: 43px;
-        margin-top: 32px;
-        padding-bottom: 62px;
-        width: 243px;
-    }
-
-    /*Стили для кнопок*/
-    .contacts-button-container {
-        padding-bottom: 79px;
-    }
-
-    .contacts-button-locations {
-        margin-right: 15px;
-        padding: 0 35px;
-    }
-
-    .contacts-button-franchise {
-        padding: 0 35px;
-    }
+  .contacts-button-franchise {
+    padding: 0 35px;
+    max-width: 180px;
+  }
 }
