--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,6 @@
 <section class="container-contacts">
-  <!-- <h2>Contacts</h2> -->
-
   <div class="container">
+    <h2 class="visually-hidden">Contacts</h2>
     <div class="contacts">
       <ul class="contacts-cards">
         <li class="contacts-list">
