--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -96,8 +96,8 @@
 }
 
 .contacts-work-list {
-  padding-top: 15px;
-  padding-bottom: 25px;
+  margin-top: 15px;
+  margin-bottom: 25px;
 
   font-weight: 500;
   line-height: 1.5;
@@ -128,7 +128,7 @@
   font-weight: 500;
   line-height: 1.5;
   color: var(--pink);
-    list-style: none;
+  list-style: none;
 }
 
 .contscts-nav {
