--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,21 +1,42 @@
-.gallery-img {
-    width: 100%;
-    height: auto;
-    @media screen and (min-width: 480px) {
-        & {
-            width: 480px;
-        }
+.gallery {
+    width: 100vw;
+    height: calc(100vw*0.34);
+    background-image: url(../images/images/gallery/galleryMobile@1x.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+        screen and (min-resolution: 192dpi) and (min-width: 320px),
+        screen and (min-resolution: 2dppx) and (min-width: 320px) {
+            background-image: url(../images/images/gallery/galleryMobile@2x.jpg);
     }
 
+  
     @media screen and (min-width: 768px) {
         & {
-            width: 768px;
+            background-image: url(../images/images/gallery/galleryTablet@1x.jpg);
         }
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+    screen and (min-resolution: 192dpi) and (min-width: 768px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px) {
         & {
-            width: 1200px;
+            background-image: url(../images/images/gallery/galleryTablet@2x.jpg);
         }
     }
-}
+
+    @media screen and (min-width: 1280px) {
+        & {
+            background-image: url(../images/images/gallery/galleryTablet@1x.jpg);
+        }
+    }
+
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
+    screen and (min-resolution: 192dpi) and (min-width: 1280px),
+    screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+        & {
+            background-image: url(../images/images/gallery/galleryDesktop@2x.jpg);
+        }
+    }
+} 
