--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,10 +1,22 @@
+.section-products {
+  padding-top: 121px;
+  padding-bottom: 98px;
 
+  @media screen and (min-width: 768px) {
+    padding-top: 122px;
+  padding-bottom: 112px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 127px;
+    padding-bottom: 114px;
+  }
+}
 // ==========заголовок
 
 .products-text {
   margin: 0;
   margin-bottom: 15px;
-  padding-top: 121px;
   font-family: Titan One;
   font-style: normal;
   font-weight: 400;
@@ -58,22 +70,36 @@
 
 // ===============список
 .products-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
+    justify-content: space-between;
   }
 }
 
 .products-list {
+  justify-content: space-between;
+
   @media screen and (min-width: 768px) {
+    justify-content: space-between;
+
     &:not(:last-child) {
       margin-right: 20px;
+      
     }
   }
 
   @media screen and (min-width: 1280px) {
+    justify-content: space-between;
+
     &:not(:last-child) {
       margin-right: 24px;
+      
     }
   }
 }
@@ -429,20 +455,16 @@ background: var(--mobile-menu-pseudo-color);
 transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.j {
+.product-list {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -90%);
-  
-  width: 250px;
-  height: 250px;
+  transform: translate(-50%, -50%);
+ 
   background-color: var(--white);
   border-radius: 4%;
   z-index: 100;
-  }
 
-.product-list {
   padding: 15px 0;
   border-radius: 4%;
   width: 100%;
@@ -467,6 +489,7 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .product-img {
   border-radius: 4%;
+  margin: auto;
 }
 
 .product-text{
