--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -36,4 +36,57 @@
       </svg>
     </div>
   </div>
+
+  <div rev_slider>
+    <div class="slider">
+      <div
+        class="photo"
+        style="
+          background-image: url(https://images.unsplash.com/photo-1554080353-a576cf803bda?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHw%3D&ixlib=rb-1.2.1&w=1000&q=80);
+        "
+        ;
+      ></div>
+      <h2 class="name">Владислав</h2>
+      <div class="text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+        esse quo dicta officia beatae consectetur eum, voluptas iure molestiae,
+        debitis ipsam! Sequi pariatur aliquid quo suscipit odit. Necessitatibus,
+        obcaecati velit!
+      </div>
+    </div>
+
+    <div class="slider">
+      <div
+        class="photo"
+        style="
+          background-image: url(https://images.unsplash.com/photo-1554080353-a576cf803bda?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHw%3D&ixlib=rb-1.2.1&w=1000&q=80);
+        "
+        ;
+      ></div>
+      <h2 class="name">Владислав</h2>
+      <div class="text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+        esse quo dicta officia beatae consectetur eum, voluptas iure molestiae,
+        debitis ipsam! Sequi pariatur aliquid quo suscipit odit. Necessitatibus,
+        obcaecati velit!
+      </div>
+    </div>
+
+    <div class="slider">
+      <div
+        class="photo"
+        style="
+          background-image: url(https://images.unsplash.com/photo-1554080353-a576cf803bda?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHw%3D&ixlib=rb-1.2.1&w=1000&q=80);
+        "
+        ;
+      ></div>
+      <h2 class="name">Владислав</h2>
+      <div class="text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+        esse quo dicta officia beatae consectetur eum, voluptas iure molestiae,
+        debitis ipsam! Sequi pariatur aliquid quo suscipit odit. Necessitatibus,
+        obcaecati velit!
+      </div>
+    </div>
+  </div>
 </section>
