--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -27,12 +27,10 @@
   margin-left: auto;
   margin-right: auto;
 
-  background-image: repeating-linear-gradient(
-    to bottom,
-    rgb(250, 250, 250),
-    rgb(250, 250, 250) 11%,
-    rgb(224, 224, 224) 12%
-  );
+  background-image: repeating-linear-gradient(to bottom,
+      rgb(250, 250, 250),
+      rgb(250, 250, 250) 11%,
+      rgb(224, 224, 224) 12%);
 
   &::before {
     content: '';
@@ -113,12 +111,10 @@
     width: 460px;
     height: 88px;
 
-    background-image: repeating-linear-gradient(
-      to bottom,
-      rgb(250, 250, 250),
-      rgb(250, 250, 250) 31%,
-      rgb(224, 224, 224) 33%
-    );
+    background-image: repeating-linear-gradient(to bottom,
+        rgb(250, 250, 250),
+        rgb(250, 250, 250) 31%,
+        rgb(224, 224, 224) 33%);
 
     &::before {
       top: -20px;
@@ -175,12 +171,10 @@
     width: 750px;
     height: 58px;
 
-    background-image: repeating-linear-gradient(
-      to bottom,
-      rgb(250, 250, 250),
-      rgb(250, 250, 250) 47%,
-      rgb(224, 224, 224) 50%
-    );
+    background-image: repeating-linear-gradient(to bottom,
+        rgb(250, 250, 250),
+        rgb(250, 250, 250) 47%,
+        rgb(224, 224, 224) 50%);
 
     &::before {
       top: -20px;
@@ -206,4 +200,14 @@
       background-image: url(../images/dots.png);
     }
   }
+
+  .photo {
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+  }
+
 }
