--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -44,91 +44,97 @@
             </div> 
 
             <div class="ice__cream">
-                <!-- <div class="circl"></div> -->
-                    <picture>
-                        <source srcset="./images/hero/ice/ice-cream-desktop-pic.webp 1x, 
-                                        ./images/hero/ice/ice-cream-desktop-pic@2x.webp 2x"
-                                        media="(min-width:1280px)" 
-                                        type="image/webp">                
-                            <source srcset="./images/hero/ice/ice-cream-desktop-pic.png 1x, 
-                                            ./images/hero/ice/ice-cream-desktop-pic@2x.png 2x" 
-                                        media="(min-width:1280px)">
-            
-                        
-                        <source srcset="./images/hero/ice/ice-cream-tablet-pic.webp 1x, 
-                                        ./images/hero/ice/ice-cream-tablet-pic@2x.webp 2x"
-                                        media="(min-width:768px)" 
-                                        type="image/webp">
-                            <source srcset="./images/hero/ice/ice-cream-tablet-pic.png 1x, 
-                                            ./images/hero/ice/ice-cream-tablet-pic@2x.png 2x" 
-                                        media="(min-width:768px)">
-            
-            
-                        <source srcset="./images/hero/ice/ice-cream-mobile-pic.webp 1x, 
-                                        ./images/hero/ice/ice-cream-mobile-pic@2x.webp 2x"
-                                        media="(max-width:767px)" 
-                                        type="image/webp">
-                            <source srcset="./images/hero/ice/ice-cream-mobile-pic.png 1x, 
-                                            ./images/hero/ice/ice-cream-mobile-pic@2x.png 2x" 
-                                        media="(max-width:767px)"> 
-            
-                            <img class="ice__cream_img" src="./images/hero/ice/ice-cream-mobile-pic.png" alt="Our delicious ice cream">
-                    </picture>
-            
-                </div>
-            
-                <div class="girl-wraper">
-                    <picture>
-                        <source srcset="./images/hero/girl/girl-desktop-pic.webp 1x, 
-                                        ./images/hero/girl/girl-desktop-pic@2x.webp 2x"
-                                        media="(min-width:1280px)" 
-                                        type="image/webp">                
-                            <source srcset="./images/hero/girl/girl-desktop-pic.png 1x, 
-                                            ./images/hero/girl/girl-desktop-pic@2x.png 2x" 
-                                        media="(min-width:1280px)">
-            
-                        
-                        <source srcset="./images/hero/girl/girl-tablet-pic.webp 1x, 
-                                        ./images/hero/girl/girl-tablet-pic@2x.webp 2x"
-                                        media="(min-width:768px)" 
-                                        type="image/webp">
-                            <source srcset="./images/hero/girl/girl-tablet-pic.png 1x, 
-                                            ./images/hero/girl/girl-tablet-pic@2x.png 2x" 
-                                        media="(min-width:768px)">
-            
-                            <img class="girl_img" src="./images/hero/girl/girl-tablet-pic.png" alt="Girl eating ice cream with pleasure">
-                    </picture>
-                </div>
-            
-                <div class="milk-wraper">
-                    <picture>
-                        <source srcset="./images/hero/milk/milk-desktop-pic.webp 1x, 
-                                        ./images/hero/milk/milk-desktop-pic@2x.webp 2x"
-                                        media="(min-width:1280px)" 
-                                        type="image/webp">                
-                            <source srcset="./images/hero/milk/milk-desktop-pic.png 1x, 
-                                            ./images/hero/milk/milk-desktop-pic@2x.png 2x" 
-                                        media="(min-width:1280px)">
-            
-                        
-                        <source srcset="./images/hero/milk/milk-tablet-pic.webp 1x, 
-                                        ./images/hero/milk/milk-tablet-pic@2x.webp 2x"
-                                        media="(min-width:768px)" 
-                                        type="image/webp">
-                            <source srcset="./images/hero/milk/milk-tablet-pic.png 1x, 
-                                            ./images/hero/milk/milk-tablet-pic@2x.png 2x" 
-                                        media="(min-width:768px)">
-            
-                            <img class="milk_img" src="./images/hero/milk/milk-tablet-pic.png" alt="Girl eating ice cream with pleasure">
-                    </picture>
-                </div>
+            <!-- <div class="circl"></div> -->
+                <picture>
+                    <source srcset="./images/hero/ice/ice-cream-desktop-pic.webp 1x, 
+                                    ./images/hero/ice/ice-cream-desktop-pic@2x.webp 2x"
+                                    media="(min-width:1280px)" 
+                                    type="image/webp">                
+                        <source srcset="./images/hero/ice/ice-cream-desktop-pic.png 1x, 
+                                        ./images/hero/ice/ice-cream-desktop-pic@2x.png 2x" 
+                                    media="(min-width:1280px)">
+        
+                    
+                    <source srcset="./images/hero/ice/ice-cream-tablet-pic.webp 1x, 
+                                    ./images/hero/ice/ice-cream-tablet-pic@2x.webp 2x"
+                                    media="(min-width:768px)" 
+                                    type="image/webp">
+                        <source srcset="./images/hero/ice/ice-cream-tablet-pic.png 1x, 
+                                        ./images/hero/ice/ice-cream-tablet-pic@2x.png 2x" 
+                                    media="(min-width:768px)">
+        
+        
+                    <source srcset="./images/hero/ice/ice-cream-mobile-pic.webp 1x, 
+                                    ./images/hero/ice/ice-cream-mobile-pic@2x.webp 2x"
+                                    media="(max-width:767px)" 
+                                    type="image/webp">
+                        <source srcset="./images/hero/ice/ice-cream-mobile-pic.png 1x, 
+                                        ./images/hero/ice/ice-cream-mobile-pic@2x.png 2x" 
+                                    media="(max-width:767px)"> 
+        
+                        <img class="ice__cream_img" src="./images/hero/ice/ice-cream-mobile-pic.png" alt="Our delicious ice cream">
+                </picture>
+        
+            </div>
+        
+            <div class="girl-wraper">
+                <picture>
+                    <source srcset="./images/hero/girl/girl-desktop-pic.webp 1x, 
+                                    ./images/hero/girl/girl-desktop-pic@2x.webp 2x"
+                                    media="(min-width:1280px)" 
+                                    type="image/webp">                
+                        <source srcset="./images/hero/girl/girl-desktop-pic.png 1x, 
+                                        ./images/hero/girl/girl-desktop-pic@2x.png 2x" 
+                                    media="(min-width:1280px)">
+        
+                    
+                    <source srcset="./images/hero/girl/girl-tablet-pic.webp 1x, 
+                                    ./images/hero/girl/girl-tablet-pic@2x.webp 2x"
+                                    media="(min-width:768px)" 
+                                    type="image/webp">
+                        <source srcset="./images/hero/girl/girl-tablet-pic.png 1x, 
+                                        ./images/hero/girl/girl-tablet-pic@2x.png 2x" 
+                                    media="(min-width:768px)">
+        
+                        <img class="girl_img" src="./images/hero/girl/girl-tablet-pic.png" alt="Girl eating ice cream with pleasure">
+                </picture>
+            </div>
+        
+            <div class="milk-wraper">
+                <picture>
+                    <source srcset="./images/hero/milk/milk-desktop-pic.webp 1x, 
+                                    ./images/hero/milk/milk-desktop-pic@2x.webp 2x"
+                                    media="(min-width:1280px)" 
+                                    type="image/webp">                
+                        <source srcset="./images/hero/milk/milk-desktop-pic.png 1x, 
+                                        ./images/hero/milk/milk-desktop-pic@2x.png 2x" 
+                                    media="(min-width:1280px)">
+        
+                    
+                    <source srcset="./images/hero/milk/milk-tablet-pic.webp 1x, 
+                                    ./images/hero/milk/milk-tablet-pic@2x.webp 2x"
+                                    media="(min-width:768px)" 
+                                    type="image/webp">
+                        <source srcset="./images/hero/milk/milk-tablet-pic.png 1x, 
+                                        ./images/hero/milk/milk-tablet-pic@2x.png 2x" 
+                                    media="(min-width:768px)">
+        
+                        <img class="milk_img" src="./images/hero/milk/milk-tablet-pic.png" alt="Girl eating ice cream with pleasure">
+                </picture>
+            </div>
 
-<div class="bio-title">
-    <p class="bio-title-deskr">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-    </p>
-    
-</div>
+            <div class="bio-title-wrap">
+                <!-- <div class="bio-title"> -->
+                    <p class="bio-title-deskr">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    </p>
+                <!-- </div> -->
+                <button class="btn__bio-title " type="button">
+                    <svg class="arrow-icon_bio">
+                        <use href="./images/icon/sprite-arrow.svg#arrow-right"></use>
+                    </svg>
+                </button>
+            </div>
 
     </div>
     <!-- end hero wraper    -->
