--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -271,7 +271,7 @@
 
     <ul class="mobil-list list" id="menu2">
       <li class="mobil-item">
-        <a class="mobil-link accent link" id-Exit1 href="#Home">Home</a>
+        <a class="mobil-link accent link" id-Exit1 href="#home">Home</a>
       </li>
       <li class="mobil-item">
         <!-- <a class="mobil-link link" id-Exit2 href="#gallery">About us</a> -->
